--- a/hugo.toml
+++ b/hugo.toml
@@ -63,7 +63,7 @@ languageName = "English"
     # LoveIt CHANGED | 0.2.7 title shown in home page (HTML format is supported)
     title = "0x1do"
     # subtitle shown in home page (HTML format is supported)
-    subtitle = ""
+    subtitle = "writeups"
     description = "My personal portfolio, showcasing me and my achievements in cybersecurity, as well as a blog where I share CTF write-ups, penetration testing insights, and other security-related content. 🚀 "
     # whether to use typeit animation for subtitle
     typeit = true
