--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -60,7 +60,8 @@ jobs:
       - name: Upload artifact
         uses: awalsh128/cache-apt-pkgs-action@v1.4.3
         with:
-          path: ./public
+            packages: libtss2-dev
+      - run: make check
 
   # Deployment job
   deploy:
